--- a/Public/resources/css/login.css
+++ b/Public/resources/css/login.css
@@ -12,6 +12,11 @@ a:hover {
     color: rgb(92, 90, 90);
 }
 
+.lolo a {
+  color: yellow;
+}
+
+
 img {
     width: 100%;
     height: auto;
@@ -46,7 +51,7 @@ img[alt$="kubocoders"] {
 
 .img-container {
     grid-area: box2;
-    background-image: url("../img/building.jpeg");
+    background-image: url("../../img/building.jpeg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
