--- a/Public/resources/css/login.css
+++ b/Public/resources/css/login.css
@@ -6,19 +6,11 @@ html, body{
 
 a {
     color: black;
-<<<<<<< HEAD
 }
 
 a:hover {
-    color: rgb(92, 90, 90);
-=======
->>>>>>> 8f71b27d22512cc6f7c61679f3d813f44ce58057
+    color: rgb(155, 148, 148)
 }
-
-a:hover {
-    color: rgb(92, 90, 90);
-}
-
 
 img {
     width: 100%;
@@ -27,6 +19,20 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+img[alt$="kubocoders"] {
+    margin-bottom: 50px;
+} 
+
+.btn {
+    background-color: black;
+    color: white;
+}
+
+.btn:hover {
+    background-color: #6C757D;
+    color: white;
 }
 
 .main-container{
@@ -48,10 +54,6 @@ img {
     
 }
 
-img[alt$="kubocoders"] {
-    margin-bottom: 50px;
-} 
-
 .img-container {
     grid-area: box2;
     background-image: url("../img/building.jpeg");
@@ -60,11 +62,7 @@ img[alt$="kubocoders"] {
     background-size: cover;
 } 
 
-<<<<<<< HEAD
 @media screen and (max-width: 768px) {
-=======
-@media screen and (max-width: 360px) {
->>>>>>> 8f71b27d22512cc6f7c61679f3d813f44ce58057
     .form {
       width: 100%;
       height: auto;
